--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ACTLOG",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.6.3",
     "react-native": "^0.57.8",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.2.2",
     "react-native-gesture-handler": "^1.0.10",
