--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ACTLOG",
-  "version": "1.4.0",
+  "version": "1.4.2-BETA2",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
