--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ACTLOG",
-  "version": "1.4.2-BETA2",
+  "version": "1.4.2-BETA3",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -16,6 +16,8 @@
     "react-native-gesture-handler": "^1.0.10",
     "react-native-image-crop-picker": "^0.23.0",
     "react-native-image-picker": "^0.28.0",
+    "react-native-modal": "^10.0.0",
+    "react-native-progress": "^3.6.0",
     "react-native-vector-icons": "^6.0.0",
     "react-navigation": "^3.3.0",
     "rn-fetch-blob": "^0.10.15"
