--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-native-modal": "^10.0.0",
     "react-native-progress": "^3.6.0",
     "react-native-vector-icons": "^6.0.0",
-    "react-navigation": "^3.3.0",
-    "rn-fetch-blob": "^0.10.15"
+    "react-navigation": "^3.3.0"
   },
   "devDependencies": {
     "babel-jest": "^24.1.0",
